--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,7 +42,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/socketChatAPILatest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/socketchatappv2
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
